--- a/src/main/resources/dart2-v3template/_map_copy.mustache
+++ b/src/main/resources/dart2-v3template/_map_copy.mustache
@@ -1,4 +1,4 @@
-data{{#nullSafe}}{{#isNullable}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/isNullable}}{{/nullSafe}}.map((String key,
+data{{#nullSafe}}{{#vendorExtensions.x-dart-nullable}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/vendorExtensions.x-dart-nullable}}{{/nullSafe}}.map((String key,
 {{#items}}
   {{#isMap}}
     {{{vendorExtensions.x-innerType}}} data) => MapEntry<String, {{{vendorExtensions.x-innerType}}}>(key, (dynamic data) { return {{>_copy}}; }(data) ))
