--- a/src/main/resources/dart2-v3template/_simple_from_json_required.mustache
+++ b/src/main/resources/dart2-v3template/_simple_from_json_required.mustache
@@ -1,10 +1,10 @@
-{{#isEnum}}{{^isNullable}}
+{{#isEnum}}{{^vendorExtensions.x-dart-nullable}}
 final _enumVal = {{enumName}}Extension.fromJson(_jsonData);
-if (_enumVal == null) throw DeserialisationError(json, r'{{{baseName}}}', r'{{{className}}}', '{{enumName}} has no valid translation from $_enumVal');{{/isNullable}}
+if (_enumVal == null) throw DeserialisationError(json, r'{{{baseName}}}', r'{{{className}}}', '{{enumName}} has no valid translation from $_enumVal');{{/vendorExtensions.x-dart-nullable}}
 {{/isEnum}}
 return {{#isEnum}}
-  {{^isNullable}}_enumVal;{{/isNullable}}
-  {{#isNullable}}{{enumName}}Extension.fromJson(_jsonData);{{/isNullable}}
+  {{^vendorExtensions.x-dart-nullable}}_enumVal;{{/vendorExtensions.x-dart-nullable}}
+  {{#vendorExtensions.x-dart-nullable}}{{enumName}}Extension.fromJson(_jsonData);{{/vendorExtensions.x-dart-nullable}}
 {{/isEnum}}
 {{#isDateTime}}DateTime.parse(_jsonData);{{/isDateTime}}
 {{#isDate}}DateTime.parse(_jsonData + 'T00:00:00.000Z');{{/isDate}}
