--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -25,7 +25,7 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
   {{/vendorExtensions.x-dart-inherited}}
 {{/vars}}
 {{^hasVars}}{{^parent}}
-  {{^isNullable}}{{#nullSafe}}late {{/nullSafe}}{{/isNullable}}dynamic json;
+  {{^vendorExtensions.x-dart-nullable}}{{#nullSafe}}late {{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}dynamic json;
 {{/parent}}{{/hasVars}}
 {{{classname}}}(
 {{#hasVars}}{
@@ -59,7 +59,7 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
   {{#nullSafe}}
       {{^vendorExtensions.x-var-is-binary}}
         {{^vendorExtensions.x-dart-inherited}}
-          {{^isNullable}}
+          {{^vendorExtensions.x-dart-nullable}}
             final _jsonData = json[r'{{{baseName}}}'];
             if (_jsonData == null) {
               {{#required}}
@@ -73,12 +73,12 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
             {{#isArray}}{{>_complex_from_json_required}}{{/isArray}}
             {{#isMap}}{{>_complex_from_json_required}}{{/isMap}}
             {{^items}}{{>_simple_from_json_required}}{{/items}}
-          {{/isNullable}}
+          {{/vendorExtensions.x-dart-nullable}}
 
-          {{#isNullable}}
+          {{#vendorExtensions.x-dart-nullable}}
             {{#isArray}}{{>_complex_from_json}}{{/isArray}}
             {{#isMap}}{{>_complex_from_json}}{{/isMap}}
-            {{^items}}{{>_simple_from_json}}{{/items}}{{/isNullable}}
+            {{^items}}{{>_simple_from_json}}{{/items}}{{/vendorExtensions.x-dart-nullable}}
         {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}
   {{/nullSafe}}
   {{^nullSafe}}
@@ -88,10 +88,10 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
         {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}
   {{/nullSafe}}
     {{#vendorExtensions.x-var-is-binary}}
-      {{^isNullable}}
+      {{^vendorExtensions.x-dart-nullable}}
       return {{#isArray}}const []{{/isArray}}{{#isMap}}const {}{{/isMap}}{{^isArray}}{{^isMap}}MultipartFile.fromBytes([]){{/isMap}}{{/isArray}};
-      {{/isNullable}}
-      {{#isNullable}}return null;{{/isNullable}}
+      {{/vendorExtensions.x-dart-nullable}}
+      {{#vendorExtensions.x-dart-nullable}}return null;{{/vendorExtensions.x-dart-nullable}}
   {{/vendorExtensions.x-var-is-binary}}
   }
   {{/vars}}
@@ -166,13 +166,13 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
   {{#hasVars}}
     {{#vars}}{{^vendorExtensions.x-dart-inherited}}
         {{#vendorExtensions.x-ns-default-val}}
-          if ({{{name}}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.isNotEmpty{{#isNullable}}{{#nullSafe}} == true{{/nullSafe}}{{/isNullable}}) {
+          if ({{{name}}}{{#vendorExtensions.x-dart-nullable}}{{#nullSafe}}?{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.isNotEmpty{{#vendorExtensions.x-dart-nullable}}{{#nullSafe}} == true{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}) {
         {{/vendorExtensions.x-ns-default-val}}
         {{^vendorExtensions.x-ns-default-val}}
           {{#nullSafe}}
-          {{#isNullable}}
+          {{#vendorExtensions.x-dart-nullable}}
           if ({{{name}}} != null) {
-          {{/isNullable}}
+          {{/vendorExtensions.x-dart-nullable}}
           {{/nullSafe}}
         {{/vendorExtensions.x-ns-default-val}}
       {{#isArray}}
@@ -189,9 +189,9 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
       {{/vendorExtensions.x-ns-default-val}}
       {{^vendorExtensions.x-ns-default-val}}
         {{#nullSafe}}
-          {{#isNullable}}
+          {{#vendorExtensions.x-dart-nullable}}
             }
-          {{/isNullable}}
+          {{/vendorExtensions.x-dart-nullable}}
         {{/nullSafe}}
       {{/vendorExtensions.x-ns-default-val}}
 
@@ -210,17 +210,17 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
   {{#vars}}
     final _copy_{{{name}}} = {{{name}}} ??
     {{#nullSafe}}
-  {{^isNullable}}
+  {{^vendorExtensions.x-dart-nullable}}
     {{#isArray}}{{>_complex_copy_required}}{{/isArray}}{{#isMap}}{{>_complex_copy_required}}{{/isMap}}{{^items}}{{^isModel}}this.{{{name}}}{{/isModel}}{{#isModel}}this.{{{name}}}.copyWith(){{/isModel}};{{/items}}
-  {{/isNullable}}
-  {{#isNullable}}
+  {{/vendorExtensions.x-dart-nullable}}
+  {{#vendorExtensions.x-dart-nullable}}
     {{#vendorExtensions.x-ns-default-val}}
       {{#isArray}}{{>_complex_copy_required}}{{/isArray}}{{#isMap}}{{>_complex_copy_required}}{{/isMap}}{{^items}}{{^isModel}}this.{{{name}}}{{/isModel}}{{#isModel}}this.{{{name}}}.copyWith(){{/isModel}};{{/items}}
     {{/vendorExtensions.x-ns-default-val}}
     {{^vendorExtensions.x-ns-default-val}}
       {{#isArray}}{{>_complex_copy}}{{/isArray}}{{#isMap}}{{>_complex_copy}}{{/isMap}}{{^items}}{{^isModel}}this.{{{name}}}{{/isModel}}{{#isModel}}this.{{{name}}}?.copyWith(){{/isModel}};{{/items}}
     {{/vendorExtensions.x-ns-default-val}}
-  {{/isNullable}}
+  {{/vendorExtensions.x-dart-nullable}}
   {{/nullSafe}}
   {{^nullSafe}}
     {{#isArray}}{{>_complex_copy}}{{/isArray}}{{#isMap}}{{>_complex_copy}}{{/isMap}}{{^items}}{{^isModel}}this.{{{name}}}{{/isModel}}{{#isModel}}this.{{{name}}}?.copyWith(){{/isModel}};{{/items}}
