--- a/src/main/resources/dart2-v3template/_array_copy.mustache
+++ b/src/main/resources/dart2-v3template/_array_copy.mustache
@@ -2,7 +2,7 @@
   data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.
   {{#isArray}}
     map((data) { return (({{{dataType}}} data) {
-    return {{>_copy}};})(data); }).toList()
+    return {{>_copy}};})(data); }){{^nullSafe}}{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}{{/nullSafe}}.toList()
   {{/isArray}}
   {{#isMap}}
     map((data) { ((data) { return {{>_copy}};})(data); }).toList()
