phase 3 - beginning of dealing with num casting
this is to fix #70

--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -23,7 +23,17 @@
           (data as List<dynamic>)?.cast<{{{dataType}}}>()
       {{/nullSafe}}
       {{#nullSafe}}
-          (data as List<dynamic>?)?.cast<{{{dataType}}}>() ?? <{{{dataType}}}>[]
+          {{#isInteger}}
+              (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.map((n) => (n as num).toInt()).toList()
+          {{/isInteger}}
+          {{^isInteger}}
+            {{#isNumeric}}
+                (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.map((n) => (n as num).toDouble()).toList()
+            {{/isNumeric}}
+            {{^isNumeric}}
+                (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.cast<{{{dataType}}}>(){{#x-dart-nullable}} ?? <{{{dataType}}}>[]{{/x-dart-nullable}}
+            {{/isNumeric}}
+          {{/isInteger}}
       {{/nullSafe}}
     {{/isPrimitiveType}}
     {{#isAnyType}}data{{/isAnyType}}
