--- a/src/main/resources/dart2-v3template/_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_from_json.mustache
@@ -45,7 +45,11 @@
     {{/vendorExtensions.x-dart-nullable}}
   {{/isModel}}
   {{#isPrimitiveType}}
-    data as {{{dataType}}}
+    {{#isInteger}}data.round(){{/isInteger}}
+    {{^isInteger}}
+      {{#isNumeric}}data.toDouble(){{/isNumeric}}
+      {{^isNumeric}}data as {{{dataType}}}{{/isNumeric}}
+    {{/isInteger}}
   {{/isPrimitiveType}}
   {{#isAnyType}}data{{/isAnyType}}
 {{/items}}
