--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -19,22 +19,20 @@
       {{complexType}}.listFromJson(data)
     {{/isModel}}
     {{#isPrimitiveType}}
-      {{^nullSafe}}
-          (data as List<dynamic>)?.cast<{{{dataType}}}>()
-      {{/nullSafe}}
-      {{#nullSafe}}
-          {{#isInteger}}
-              (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.map((n) => (n as num).toInt()).toList()
-          {{/isInteger}}
-          {{^isInteger}}
-            {{#isNumeric}}
-                (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.map((n) => (n as num).toDouble()).toList()
-            {{/isNumeric}}
-            {{^isNumeric}}
-                (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.cast<{{{dataType}}}>(){{#x-dart-nullable}} ?? <{{{dataType}}}>[]{{/x-dart-nullable}}
-            {{/isNumeric}}
-          {{/isInteger}}
-      {{/nullSafe}}
+      {{#isNumeric}}
+          (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.map((n) => (n as num).
+        {{#isInteger}}toInt(){{/isInteger}}
+        {{^isInteger}}toDouble(){{/isInteger}}
+          ).toList()
+      {{/isNumeric}}
+      {{^isNumeric}}
+        {{^nullSafe}}
+            (data as List<dynamic>)?.cast<{{{dataType}}}>()
+        {{/nullSafe}}
+        {{#nullSafe}}
+            (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.cast<{{{dataType}}}>(){{#x-dart-nullable}} ?? <{{{dataType}}}>[]{{/x-dart-nullable}}
+        {{/nullSafe}}
+      {{/isNumeric}}
     {{/isPrimitiveType}}
     {{#isAnyType}}data{{/isAnyType}}
   {{/items}}
