phase 3 - maps of double/int now supported
basic types now convert for ints and doubles

--- a/src/main/resources/dart2-v3template/_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_from_json.mustache
@@ -45,7 +45,7 @@
     {{/vendorExtensions.x-dart-nullable}}
   {{/isModel}}
   {{#isPrimitiveType}}
-    {{#isInteger}}data.round(){{/isInteger}}
+    {{#isInteger}}data.toInt(){{/isInteger}}
     {{^isInteger}}
       {{#isNumeric}}data.toDouble(){{/isNumeric}}
       {{^isNumeric}}data as {{{dataType}}}{{/isNumeric}}
