--- a/src/main/resources/dart2-v3template/_simple_from_json_required.mustache
+++ b/src/main/resources/dart2-v3template/_simple_from_json_required.mustache
@@ -1,6 +1,6 @@
 {{#isEnum}}{{^vendorExtensions.x-dart-nullable}}
 final _enumVal = {{enumName}}Extension.fromJson(_jsonData);
-if (_enumVal == null) throw DeserialisationError(json, r'{{{baseName}}}', r'{{{className}}}', '{{enumName}} has no valid translation from $_enumVal');{{/vendorExtensions.x-dart-nullable}}
+if (_enumVal == null) {{> _deserialisation_error }}{{/vendorExtensions.x-dart-nullable}}
 {{/isEnum}}
 return {{#isEnum}}
   {{^vendorExtensions.x-dart-nullable}}_enumVal;{{/vendorExtensions.x-dart-nullable}}
@@ -9,4 +9,11 @@ return {{#isEnum}}
 {{#isDateTime}}DateTime.parse(_jsonData);{{/isDateTime}}
 {{#isDate}}DateTime.parse(_jsonData + 'T00:00:00.000Z');{{/isDate}}
 {{#isModel}}{{{complexType}}}.fromJson(_jsonData);{{/isModel}}
-{{#isPrimitiveType}}(_jsonData as {{{dataType}}});{{/isPrimitiveType}}
+{{#isPrimitiveType}}(
+  {{#isInteger}}json[r'{{{baseName}}}'].toInt(){{/isInteger}}
+  {{^isInteger}}
+    {{#isNumeric}}json[r'{{{baseName}}}'].toDouble(){{/isNumeric}}
+    {{^isNumeric}}json[r'{{{baseName}}}'] as {{{dataType}}}{{/isNumeric}}
+  {{/isInteger}})
+  ; // sausage
+{{/isPrimitiveType}}
