OpenAPI optionals/nulls/num casting (#85)
* phase 3 - 1 optionals are null again by default

* phase 3 - 2 ensure required fields act properly

* phase 3 - complete test fixing and minor issue with non-nullsafe Dart

* phase 3 - beginning of dealing with num casting

this is to fix #70

* phase 3 - maps of double/int now supported

further fixes for #70

* phase 3 - maps of double/int now supported

basic types now convert for ints and doubles

--- a/src/main/resources/dart2-v3template/_array_copy.mustache
+++ b/src/main/resources/dart2-v3template/_array_copy.mustache
@@ -1,16 +1,18 @@
 {{#items}}
+  data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.
   {{#isArray}}
-    data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.map((data) { return (({{{dataType}}} data) { return {{>_copy}};})(data); }).toList()
+    map((data) { return (({{{dataType}}} data) {
+    return {{>_copy}};})(data); }){{^nullSafe}}{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}{{/nullSafe}}.toList()
   {{/isArray}}
   {{#isMap}}
-    data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.map((data) { ((data) { return {{>_copy}};})(data); }).toList()
+    map((data) { ((data) { return {{>_copy}};})(data); }).toList()
   {{/isMap}}
   {{^items}}
     {{^isModel}}
-      data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.toList()
+      toList()
     {{/isModel}}
     {{#isModel}}
-      data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.map((data) => {{>_copy}}).toList()
+      map((data) => {{>_copy}}).toList()
     {{/isModel}}
   {{/items}}
 {{/items}}
