https://github.com/dart-ogurets/dart-openapi-maven/issues/88
Fix for  https://github.com/dart-ogurets/dart-openapi-maven/issues/88

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -78,7 +78,8 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
             final _jsonData = json[r'{{{baseName}}}'];
             if (_jsonData == null) {
               {{#required}}
-              {{> _deserialisation_error }}
+                {{#defaultValue}} return {{{defaultValue}}};{{/defaultValue}}
+                {{^defaultValue}}{{> _deserialisation_error }}{{/defaultValue}}
               {{/required}}
               {{^required}}
                 {{#defaultValue}} return {{{defaultValue}}};{{/defaultValue}}
